<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.otus</groupId>
    <artifactId>otus_java</artifactId>
    <packaging>pom</packaging>
    <version>2019-03-SNAPSHOT</version>

    <modules>
        <module>L01-maven</module>
        <module>L03-generic-collections</module>
        <module>L06-gc</module>

        <module>L08-classLoader</module>

        <module>L09-annotations</module>
        <module>L11-solid</module>
        <module>L17-jdbc</module>
    </modules>

    <developers>
        <developer>
            <name>chupaYchups</name>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <com.gooogle.guava.version>27.1-jre</com.gooogle.guava.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${com.gooogle.guava.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13-rc-2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>